[package]
name = "browser-cookie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
serde_json = "^1.0"
valq = "0.1.0"
aes-gcm = { version = "0.10.0-pre", features = ["std"]}
err-derive = "0.3.1"
thiserror = "1.0"
reqwest_cookie_store = "0.3"
# cookie_store = { git = "https://github.com/pfernie/cookie_store", branch = "pub-from-cookies" }
cookie_store = "0.16"
cookie = "0.16"
url = "2.2"

[dependencies.windows]
version = "0.37.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
]

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]

[dev-dependencies]
reqwest = { version = "0.11", features = ["cookies", "blocking"] }
reqwest_cookie_store = "0.3"
